--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,8 @@
-flask==3.0.0
+flask==1.1.2
+flask_script
+flask_sqlalchemy
+flask_debugtoolbar
+jinja2==2.11.3
+markupsafe==1.1.1
+itsdangerous==1.1.0
+werkzeug==0.16.1
